--- a/website/CSS/home.css
+++ b/website/CSS/home.css
@@ -1,3 +1,14 @@
+body {
+    background: #FFF;
+    box-sizing: border-box;
+    color:#FFF;
+}
+
+.container {
+    width:auto;
+    margin:auto;
+    background:#FFF;
+}
 
 
 /* naviagtion bar */
@@ -26,24 +37,33 @@
 color:#4CAF50;
 }
 
+/*Cover pic*/
+.cover
+{
+  width: 100%;
+}
+
+.water_img{
+  height:500px;
+  object-fit: cover;
+}
 
 
 
-
-/* footer div*/
-footer{
-    padding: 6px 6px 6px 6px;
+/* Footer id  */
+#footer { 
+    clear: both; 
+    width: max-width; 
+    margin: 0 auto; 
+    padding: 1px; 
+    border-top: 1px solid #1a1a1a; 
     background: #1a1a1a;
+    color:#FFF;
     font-family: "Lucida Sans Unicode";
-    color: #FFF;
     font-size:15px;
-    text-decoration:right;
-    float:right;
-}
-
-footer a{
-    text-decoration:none;
-}
+    position:fixed;
+    bottom:0;
+}	
 
 .icons{
     text-align: center;
