--- a/website/CSS/home.css
+++ b/website/CSS/home.css
@@ -23,6 +23,7 @@ body {
 .menu{
     background:#1a1a1a;
     padding: 20px 20px 20px 20px;
+   
 }
 
 
@@ -31,6 +32,10 @@ body {
     text-decoration: none;
     font-size : 25px;
     font-family: "Arial Narrow", "Myriad Pro";
+    border-left: 10px;
+    border-right: 10px;
+    border-bottom: 10px;
+    border-top: 10px;
 }
 
 .menu a:hover { 
@@ -69,4 +74,53 @@ color:#4CAF50;
     text-align: center;
     float:center;
     position:inherit;
+}
+
+
+/* contact form*/
+ #form{
+    width: 500px;
+    border: 2px solid black;
+    padding: 10px 10px 10px 10px;
+    margin: 0 auto; 
+    background:rgb(10, 62, 181);
+    box-shadow:1px 1px 1px 1px;
+    border-radius: 5px;
+    position:inherit;
+    float:right;
+    bottom:0;
+
+  
+}
+
+/* use media queries for responsiveness */
+
+@media screen and (max-width: 640px){
+    #form{
+        width:inherit;
+    }
+}
+
+
+
+ #form input{
+    width: 100%;
+    border-radius: 5px;
+    height: 20px;
+    background: #FFF;
+}
+
+
+#form #message{
+    width: 100%;
+    border-radius: 5px;
+    background: #FFF;
+}
+
+
+#form #submit{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    background: #FFF;
 }
