--- a/website/CSS/home.css
+++ b/website/CSS/home.css
@@ -51,6 +51,33 @@ color:#4CAF50;
 .water_img{
   height:500px;
   object-fit: cover;
+  position: relative;
+  display: inline;
+}
+
+.logo_img{
+    
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    bottom: 0;
+    top: 200px;
+    
+    
+}
+
+@media screen and (max-width: 1200px){
+    .logo_img{
+    
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    bottom: 0;
+    top: 200px;
+    left: 310px;
+    
+    
+    }
 }
 
 
@@ -61,9 +88,9 @@ color:#4CAF50;
     width: max-width; 
     margin: 0 auto; 
     padding: 1px; 
-    border-top: 1px solid #1a1a1a; 
-    background: #1a1a1a;
-    color:#FFF;
+    border-top: 1px solid #FFFFFF; 
+    background: #FFFFFF;
+    color:#1a1a1a;
     font-family: "Lucida Sans Unicode";
     font-size:15px;
     position:fixed;
@@ -75,6 +102,7 @@ color:#4CAF50;
     float:center;
     position:inherit;
 }
+
 
 
 /* contact form*/
