--- a/website/CSS/homepage.css
+++ b/website/CSS/homepage.css
@@ -1,28 +1,63 @@
-ul{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden
-    background-color: #333;
+body {
+ 
+ font-family: Helvetica;
+ text-align:center;
+
 }
 
-li{
+#Nav {
+ width:100%;
+ height: 100px;
+ background-image: url(Images/water.jpg);
+}
+
+#Nav_wrapper{
+ background:transparent;
+ margin-left:auto;
+ margin-right:80px;
+ padding: 25px
+ 
+}
+
+#Nav_wrapper ul li {
+ float: right;
+ display: inline;
+ text-align: center;
+ font-weight: bold;
+ padding: inherit;
+}
+
+#Nav_wrapper a{
+ color:red;
+ opacity: 0.7;
+ text-decoration: none
+}
+
+#Nav_wrapper ul li a: hover{
+ background: grey;
+ opacity: 0.5;
+ transition: all 0.45s;
+}
+
+#Logo {
     float: left;
-}
-
-li a{
-    display: block
-    color: #000
-    padding: 8px 16px;
-    text-decoration: none;
-}
-
-li a: hover {
-    background-color: #FFF
-    color: white;
+    padding: 10px;
+    margin-left: 40px;
+    background-image:url(Images/Logo.png); 
+    margin-top: -68px
     
 }
-
-.active {
-    background-color: transparent;
+#Galleries_Container{
+    padding: 100px;
+    background-color: grey;
+    opacity: 0.7;
+}
+#Galleries_Container ul li {
+    float: center;
+    display: inline;
+    padding: inherit;
+}
+#Copyright{
+ background-color: slategrey;
+    
 }
