--- a/website/CSS/homepage.css
+++ b/website/CSS/homepage.css
@@ -6,11 +6,12 @@ body {
 }
 
 #Nav {
-width: 100%;
-height: 800px;
- display: inline-block;
+max-width: 100%;
+max-height: 100%;    
+/*height: 800px;*/
+ display:flex;
  background-image: url(../Images/water.jpg);
- resize: both;
+ resize:both;
  z-index: -1 position:relative;
  background-repeat: no-repeat;
 }
