--- a/website/CSS/homepage.css
+++ b/website/CSS/homepage.css
@@ -4,16 +4,16 @@ body {
  text-align:center;
 
 }
-
+/* For Navigation bar*/
 #Nav {
 max-width: 100%;
-max-height: 100%;    
-/*height: 800px;*/
- display:flex;
+height: 800px;
+/* display:inline-;*/
  background-image: url(../Images/water.jpg);
  resize:both;
  z-index: -1 position:relative;
  background-repeat: no-repeat;
+ background-size: cover;
 }
 
 #Nav_wrapper{
@@ -46,16 +46,68 @@ max-height: 100%;
 }
 
 #Logo {
-    max-height: 100%;
-    max-width: 100%;
+    max-height: 150px;
+    max-width: 150px;
     float: left;
     padding: 10px;
     margin-left: 10px;
     margin-top: -68px;
-    z-index;
-    
+/*    z-index;*/
+    background-size: cover;
+
     
 }
+
+.logo2{
+  height:150px;
+  width: 150px;    
+  object-fit:contain;
+  position: relative;
+  display: inline;
+}
+
+
+/* For gallery dropdown menu*/
+li a, .dropdwn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover, .dropdown:hover .dropdwn {
+    background-color: red;
+}
+
+li.dropdown {
+    display: inline-block;
+}
+
+
+.gallery-dropdown {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.gallery-dropdown a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .gallery-dropdown {
+    display: block;
+}
+
 #Galleries_Container{
     padding: 100px;
     background-color: grey;
